--- a/screen1.css
+++ b/screen1.css
@@ -379,6 +379,23 @@ body {
     .details {
         width: 100%;
     }
+    /* top setion */
+    .top-section {
+        grid-template-columns: 70% 30%;
+    }
+    .bottom-section img {
+        max-width: 90%;
+    }
+    .div {
+        font-size: 7px;
+    }
+    a svg {
+        height: 20px;
+        width: 20px;
+    }
+    .copyright {
+        text-align: center;
+    }
 }
 
 
